--- a/usb-book/partes/apendiceA.tex
+++ b/usb-book/partes/apendiceA.tex
@@ -16,14 +16,14 @@
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=0.5\textwidth]{grafo.pdf}
+\includegraphics[width=0.5\textwidth]{operator-graph.pdf}
 \caption[Grafo]{Grafo gris.}
 \label{imagen:grafo}
 \end{figure}
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{grafocolor.pdf}
+\includegraphics[width=\textwidth]{operator-graph.pdf}
 \caption[Grafo coloreado (esto sale en la tabla de contenidos)]{Grafo con color.}
 \label{imagen:grafodecolores}
 \end{figure}
