Fixed the chapterTitle command

--- a/usb-book/partes/capitulo2.tex
+++ b/usb-book/partes/capitulo2.tex
@@ -1,4 +1,4 @@
-\providecommand{\chapterTitle}{Marco Tecnológico\xspace}
+\def\chapterTitle{Marco Tecnológico\xspace}
 
 \chapter{\chapterTitle}
 \label{capitulo2}
