--- a/usb-book/partes/capitulo3.tex
+++ b/usb-book/partes/capitulo3.tex
@@ -1,4 +1,4 @@
-\providecommand{\chapterTitle}{Marco Metodológico\xspace}
+\def\chapterTitle{Marco Metodológico\xspace}
 
 \chapter{\chapterTitle}
 \label{capitulo3}
