--- a/usb-book/partes/capitulo4.tex
+++ b/usb-book/partes/capitulo4.tex
@@ -1,7 +1,7 @@
-\providecommand{\chapterTitle}{Desarrollo\xspace}
+\def\chapterTitle{Desarrollo\xspace}
 
 \chapter{\chapterTitle}
-\label{capitulo4}
+\label{ch:development}
 \lhead{Capítulo 4. \emph{\chapterTitle}}
 
 \newenvironment{investigationfr}
