--- a/usb-book/partes/acta.tex
+++ b/usb-book/partes/acta.tex
@@ -43,6 +43,7 @@ Este Proyecto de Grado ha sido aprobado por el siguiente jurado examinador: \\
 \bigskip
 \bigskip
 
+{   % for \juryinfo to only exist here
 \newcommand{\juryinfo}[1]{
 \line(1,0){200} \\
 #1 \\
@@ -56,8 +57,7 @@ Este Proyecto de Grado ha sido aprobado por el siguiente jurado examinador: \\
 \juryinfo{\tutorName}
 \juryinfo{@jurado1}
 \juryinfo{@jurado2}
-
-\let\juryinfo\undefined
+}
 
 \end{minipage}
 \vfill
