--- a/usb-book/partes/capitulo1.tex
+++ b/usb-book/partes/capitulo1.tex
@@ -1,4 +1,4 @@
-\providecommand{\chapterTitle}{Marco Teórico\xspace}
+\def\chapterTitle{Marco Teórico\xspace}
 
 \chapter{\chapterTitle}
 \label{capitulo1}
