* Added more information on the mixfix operators * Fixed some frames * Finished the grammar of the mixfix parser * Added Megaparsec to bibliography

--- a/usb-book/bibliografia.bib
+++ b/usb-book/bibliografia.bib
@@ -1,9 +1,17 @@
-@inproceedings{mixfix,
-  author = "Nils Anders Danielsson and Ulf Norell",
-  title = "Parsing mixfix operators",
-  booktitle = "Implementation and Application of Functional Languages",
-  address = "Berlin, Germany",
-  year = "2011",
-  publisher = "Springer Berlin Heidelberg",
-  pages = "80-99"
+@inproceedings{article:mixfix,
+  author = {Nils Anders Danielsson and Ulf Norell},
+  title = {Parsing mixfix operators},
+  booktitle = {Implementation and Application of Functional Languages},
+  address = {Berlin, Germany},
+  year = {2011},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {80-99}
+}
+
+@misc{software:megaparsec,
+  author = {Mark Karpov},
+  title = {Megaparsec},
+  version = {4.3},
+  year = {2016},
+  url = {https://hackage.haskell.org/package/megaparsec}
 }
