Small changes and fixes

--- a/usb-book/partes/introduccion.tex
+++ b/usb-book/partes/introduccion.tex
@@ -4,13 +4,14 @@
 \addcontentsline{toc}{chapter}{Introducción}
 
 % Descripción del problema, de lo general hacia lo específico
-\blindtext 
+\blindtext
 
 % Trabajos anteriores
 \blindtext
-\cite{mixfix} presenta un trabajo que \ldots
 
-\citeauthor{mixfix} es otro autor que \ldots
+En \cite{article:mixfix} se presenta un trabajo que \ldots
+
+% \citeauthor{article:mixfix} es otro autor que \ldots
 
 % Objetivo general
 \blindtext
