--- a/usb-book/tesis.tex
+++ b/usb-book/tesis.tex
@@ -285,7 +285,7 @@
 \label{Bibliography}
 \bibliography{bibliografia}
 \lhead{\emph{Bibliografía}}
-\bibliographystyle{aaai}
+\bibliographystyle{alpha}
 \addtocontents{toc}{\vspace{2em}}
 
 % Apéndices
